main without bg & cards not correct size & not responsive website

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,8 @@ body {
 }
 main {
   margin-top: -1px;
-  background: url("../images/main/bgEllipseLine4.svg") right no-repeat;
+  background: url("../images/main/background/bgEllipseLine4.svg") right
+    no-repeat;
 }
 .conteiner {
   width: 80%;
